fixed overflow

--- a/src/components/Services/services.module.scss
+++ b/src/components/Services/services.module.scss
@@ -1,9 +1,6 @@
 .container {
-  width: 100%;
-  // height: 100%;
   margin: 0;
   padding: 0;
-  // background: #191b21;
   overflow: hidden;
   font-family: ui-monospace, monospace;
   font-size: 14px;
@@ -16,7 +13,6 @@
 }
 
 .frame {
-  // position: relative;
   padding: 5px 0px 0px 0px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -35,13 +31,12 @@
   will-change: transform, opacity, height;
   margin-left: 6px;
   padding: 0px 0px 0px 20px;
-  // border-left: 1px dashed rgba(255, 255, 255, 0.4);
   border-left: 1px dashed black;
   margin-bottom: 5px;
-  // overflow: hidden;
   div { margin: 10px 0; }
 }
 
 @media (max-width: 900px) {
   .container { font-size: 10px; }
+  .content { padding: 0px 0px 0px 20px; }
 }
